# recipes

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: rust.yml
src/: api.rs  error.rs  lib.rs  makes.rs  manufacturers.rs
src/makes/: api.rs
src/manufacturers/: api.rs
